--- a/package.json
+++ b/package.json
@@ -1,33 +1,48 @@
 {
-  "name": "node-mermaid",
+  "name": "node-mermaid-render",
   "version": "1.0.0",
-  "description": "Running mermaid in nodejs environment using node:env, jsdom and svgdom.",
-  "homepage": "https://github.com/kermanx/node-mermaid#README",
+  "description": "Render Mermaid charts in nodejs environment.",
+  "homepage": "https://github.com/kermanx/node-mermaid-render#README",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "type": "module",
+  "files": [
+    "README.md",
+    "LICENSE",
+    "dist/",
+    "lib/",
+    "package.json"
+  ],
+  "exports":{
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  },
   "scripts": {
-    "build": "tsc"
+    "build": "vite build && tsc",
+    "tsc": "tsc"
   },
   "keywords": [
     "mermaid",
-    "nodejs",
-    "jsdom"
+    "nodejs"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/kermanx/node-mermaid"
+    "url": "https://github.com/kermanx/node-mermaid-render"
   },
   "author": "_Kerman<KermanX@qq.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/jsdom": "^21.1.1",
     "@types/node": "^20.2.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "vite": "^4.4.2",
+    "vite-plugin-singlefile": "^0.13.5",
+    "vite-svg-loader": "^4.0.0"
   },
   "dependencies": {
-    "jsdom": "^22.0.0",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "mermaid": "^10.1.0",
-    "svgdom": "^0.1.14"
+    "puppeteer": "^20.8.0"
   }
 }
