--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,16 @@
 {
-  "include": ["./src"],
+  "include": ["./src/**/*"],
   "compilerOptions": {
     "outDir": "./dist",
+    "sourceMap": true,
     "declaration": true,
+    "declarationMap": true,
     "module": "ESNext",
     "target": "ESNext",
-    "moduleResolution": "node",
-    "allowJs": true
+    "moduleResolution": "Node",
+    "allowJs": true,
+    "types": ["node"],
+    "lib": ["es2020", "DOM", "DOM.Iterable"],
+    "skipLibCheck": true
   }
 }
